--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-signature-pad-no-proptypes",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "React Native wrapper around szimek's Canvas based Signature Pad",
   "main": "index.js",
   "scripts": {
@@ -31,15 +31,12 @@
     "react-native": "^0.58.6",
     "react-native-webview": "^5.3.0"
   },
-  "dependencies": {
-    "deprecated-react-native-prop-types": "2.2.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "babel-eslint": "10.0.1",
     "eslint": "^5.15.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.12.4"
+    "eslint-plugin-jsx-a11y": "^6.2.1"
   }
 }
